--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     <div id="movieDetails" class="movie-details"></div>
 </div>
 
-    <script src="./assets/script/index.js"></script>
+    <script src="./assets/script/index.js" type="module"></script>
   </body>
 </html>
