--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
       integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -27,18 +30,25 @@
     />
     <link rel="stylesheet" href="./assets/style/index.css" type="text/css" />
   </head>
-  <div class="container">
-    <h1>Movie Search</h1>
-    <div class="search-container">
-        <input type="text" id="searchInput" list="movieTitles" placeholder="Search for a movie...">
+  <body>
+    <div class="container">
+      <h1>Movie Search</h1>
+      <h2>Get your Favourite movie here!</h2>
+      <div class="search-container">
+        <input
+          type="text"
+          id="searchInput"
+          list="movieTitles"
+          placeholder="Search for a movie..."
+        />
         <datalist id="movieTitles">
           <!-- Movies will be dynamically added here -->
-      </datalist>
+        </datalist>
         <button id="searchButton">Search</button>
+      </div>
+      <div id="autocompleteResults" class="autocomplete-results"></div>
+      <div id="movieDetails" class="movie-details"></div>
     </div>
-    <div id="autocompleteResults" class="autocomplete-results"></div>
-    <div id="movieDetails" class="movie-details"></div>
-</div>
 
     <script src="./assets/script/index.js" type="module"></script>
   </body>
