--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Movie Search</h1>
+      <h1>MOVIEPLEX</h1>
       <h2>Get your Favourite movie here!</h2>
       <div class="search-container">
         <input
