--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Md Fahim Iftekhar" />
     <meta name="description" content="Social" />
     <meta name="keywords" content="Movies, movie, super" />
-    <title>Super Movies</title>
+    <title>Movieplex</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
